# numpai

./: README.md
numpai/: pyproject.toml
numpai/src/numpai/: activations.py  layers.py
numpai/tests/: CIFAR-10.ipynb  xor.py
src/numpai/: activations.py  layers.py  lossfunction.py  network.py
src/numpai/layers/: __init__.py  activation.py  base.py  convolution.py  dense.py  embedding.py  normalization.py  pooling.py  recurrent.py  regularization.py  reshape.py
tests/: CIFAR-10.ipynb  test_activations.py  test_layers.py  test_lossfunction.py  test_network.py  xor.py
