[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numpai"
version = "1.0"
authors = [
  {name="Augustin du Fayet"},
]
description = "Low-level package to build AI based on numpy. Not GPU-friendly."
dependencies = [
  "numpy",
  "scipy",
  "math",

  "matplotlib",
  "warnings",
  "sys",
  "system",
  "pickle",

  "typing",
  "pathlib",
  "__future__",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["ai", "neural-netwok", "machine-learning, "numpy", "scratch", "simple"]
license = "GNU AGPLv3 "
license-files = ["LICEN[CS]E*"]

[project.urls]